8/25/10 clean up constants related to magnifying glass view
8/25/10 fix arg names in IMoleculeLayeringStrategy, they were acid-specific
8/25/10 make control panels use standardized titled border from phetcommon (PhetTitledBorder)
8/25/10 use bold for TitledBorder fonts
# 0.00.24 (43464) Aug 25, 2010
8/25/10 change "Show Water" check box to "Show Solvent"
8/23/10 created screenshot that will appear on website
8/23/10 consolidate module package hierarchy
8/23/10 rename TestSolutionModule to IntroductionModule
8/23/10 delete ABSCanvas subclasses that add no additional functionality
8/23/10 migrate PrecisionDecimal to phetcommon
8/23/10 migrate HTMLCheckBox to phetcommon
8/23/10 misc javadoc and cleanup
8/23/10 this sim doesn't need a clock, remove clock from model interfaces, pause clock in all modules
# 0.00.23 (43391) Aug 23, 2010
8/23/10 handle disabling of water icon next to "Show Water" check box
8/23/10 simplify AbstractConcentrationGraphNode by removing unnecessary inner classes and unused features
8/23/10 change "Magnifying Glass" radio button to "Molecules"
8/23/10 change "Show H2O molecules" check box to "Show Water"
8/23/10 change "Concentration Graph" radio button to "Concentration"
8/23/10 change "Test Solution" to "Introduction"
8/23/10 modify conductivity tester's brightness model to include a "min brightness" for neutral pH, set to 0.05
8/19/10 position radio button icons close to their associated labels
# 0.00.22 (43306) Aug 19, 2010
8/19/10 fiddle with horizontal spacing between bars so that they are close to being aligned with terms in reaction equations
8/19/10 center 3 bars in concentration graph
8/19/10 restructure the scenegraph for concentration graph, so that it will be easier to change bar locations
8/19/10 tweaks to spacing and justification in control panels
8/19/10 change magnifying glass icon to show solution color and some molecules
8/19/10 add icon for "Show H2O Molecules" check box